Add assignee and reviewer block.

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -4,3 +4,7 @@ updates:
     directory: "/"
     schedule:
       interval: "daily"
+    assignees:
+      - "smalinkin"
+    reviewers:
+      - "smalinkin"
