Add telegram output

--- a/config.ini
+++ b/config.ini
@@ -20,6 +20,11 @@ api_key =
 login =
 password =
 
+[telegram]
+status = disabled
+chat_id =
+token =
+
 [logger]
 name = AlertGateway
 file_name = event.log
