Add docs and minor fixes

--- a/config.ini
+++ b/config.ini
@@ -3,6 +3,8 @@ ip = 0.0.0.0
 port = 8000
 
 [stream_resolver]
+# Status can be: disabled or enabled
+# Auth can be: token or password
 status = disabled
 graylog_url = http{s}://graylog.example.com
 auth_type = token
@@ -11,9 +13,11 @@ login =
 password =
 
 [irp_platform]
+# Platform can be: TheHive4;
 platform = TheHive4
 
 [thehive4]
+# Auth can be: api_key or password
 url = http{s}://thehive4.example.com
 auth_type = api_key
 api_key =
@@ -21,6 +25,7 @@ login =
 password =
 
 [telegram]
+# Status can be: disabled / enabled
 status = disabled
 chat_id =
 token =
