Add sentry support and unpin packages in requirements

--- a/config.ini
+++ b/config.ini
@@ -33,3 +33,10 @@ token =
 [logger]
 name = AlertGateway
 file_name = event.log
+
+[sentry]
+# Sentry is application monitoring and error tracking software
+# Status can be: disabled / enabled
+status = disabled
+dsn_url =
+traces_sample_rate = 1.0
